--- a/src/css/card.css
+++ b/src/css/card.css
@@ -2,8 +2,6 @@
    grid-row: 1 / 3;
    grid-column: 2 / 3;
    height: 100vh;
-   /* display: flex;
-   flex-direction: column; */
 }
 
 
@@ -43,7 +41,7 @@
     background-color: #d8a790;
     border-radius: 36px;
     height: 300px;
-    min-width: 295px;
+    min-width: 320px;
     max-width: 415px;
     box-shadow: 15px 15px #0000002a;
     
@@ -63,7 +61,7 @@
     font-weight: 400;
 }
 
-.title {
+.title-container {
     display: flex;
     align-items: center;
     gap: 3px;
@@ -85,7 +83,6 @@ button.edit img:hover {
 #priority {
     width: 30px;
     height: 30px;
-    /* background-color: white; */
 }
 
 #one, 
@@ -190,19 +187,37 @@ input:checked + p {
     font-size: 1.3rem;
 }
 
+.after {
+    display: none;
+}
+
 .no-task:hover {
-    color: transparent;
     background-color: #e5ddd3;
 }
 
-.no-task:hover::after {
+.no-task:hover p {
+    opacity: 0;
+}
+
+.no-task:hover .after {
+    display: block;
+    background-color: transparent;
+    border: none;
+    color: #9b4922;
+    position: relative;
+    bottom: 15%;
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+
+/* .no-task:hover::after {
     position: relative;
     content: "Click to Complete Task";
     font-size: 1.3rem;
     color: #9b4922;
-    bottom: 12%;
+    bottom: 15%;
     cursor: pointer;
-}
+} */
 
 
 @media (min-width: 1300px) {
