--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -19,14 +19,14 @@ nav h1 {
     text-underline-offset: 8px;
 }
 
-.btns {
+.nav-btns {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: .8rem;
 }
 
-.btns button {
+.nav-btns button {
     font-family: "DM Sans", sans-serif;
     font-size: 1.8rem;
     color: #764b36;
@@ -66,4 +66,11 @@ button.add-project {
     padding: 8px 10px;
     border-radius: 18px;
     box-shadow: 6px 6px #70584e89;
+}
+
+nav button:focus:not(.add-project) {
+    background-color: #a2827489;
+    color: #fdf8f3;
+    border-radius: 10px;
+    padding-inline: 10px;
 }
