--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -10,11 +10,25 @@
     box-shadow: 15px 15px #0000002a;
 }
 
-#add-task::backdrop {
+#add-project {
+    position: absolute;
+    margin: auto;
+    height: 200px;
+    width: 420px;
+    border-radius: 25px;
+    padding: 20px;
+    border: none;
+    background-color: #efe7dd;
+    box-shadow: 15px 15px #0000002a;
+}
+
+#add-task::backdrop,
+#add-project::backdrop {
     backdrop-filter: blur(2px);
 }
 
-#add-task h2 {
+#add-task h2,
+#add-project h2 {
     font-family: "Roxborough", serif;
     font-size: 1.8rem;
     font-weight: lighter;
@@ -22,36 +36,39 @@
     margin-bottom: 10px;
 }
 
-.add-task-header {
+.add-task-header,
+.add-project-header {
     display: flex;
     justify-content: space-between;
 }
 
-.add-task-header button {
+.add-task-header button,
+.add-project-header button {
     background-color: transparent;
     border: none;
 }
 
-.add-task-header img {
+.add-task-header img,
+.add-project-header img {
     width: 30px;
 }
 
-.add-task-header button:hover {
+.add-task-header button:hover,
+.add-project-header button:hover
+{
     transform: scale(1.1);
 }
 
-#add-task-form {
+#add-task-form,
+#add-project-form {
     display: flex;
     flex-direction: column;
     font-family: "DM Sans", sans-serif;
     color: #764b36;
 }
 
-#add-task-form input#priority {
-    width: 38px;
-}
-
-#add-task-form input, select {
+#add-task-form input, select,
+#add-project-form input {
     margin-bottom: 5px;
     font-family: "DM Sans", sans-serif;
     height: 24px;
@@ -60,7 +77,8 @@
     padding-inline: 5px;
 }
 
-#add-task-form button {
+#add-task-form button,
+#add-project-form button {
     font-size: 1.3rem;
     background-color: #d8a790;
     color: #764b36;
@@ -72,3 +90,5 @@
     margin-top: 15px;
     align-self: center;
 }
+
+
