Create delete button and add display priority on cards

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -112,4 +112,12 @@
     align-self: center;
 }
 
+#edit-task .edit-btns {
+    display: flex;
+    gap: 8px;
+}
+
+#edit-task-form button {
+    transform: scale(.9);
+}
 
