--- a/src/css/toast.css
+++ b/src/css/toast.css
@@ -11,7 +11,7 @@
     width: 300px;
     bottom: 10px;
     right: 5px;
-    padding: 10px;
+    padding: 10px 15px;
     border-radius: 20px;
     color: #764b36;
     background-color: #efe7dd;
